# wxTranslate

./: CMakeLists.txt  README.md  build.bat  gtranslate_respose.txt  lang.cpp  lang.h  lang_detect.h  lang_panel.cpp  lang_panel.h  main.cpp  selected_text.cpp  selected_text.h  settings.cpp  settings.h  taskbar.cpp  taskbar.h  translate.cpp  translate.h  utils.cpp  utils.h
enc_temp_folder/25495e2863911eb5557364976580a1/: taskbar.h
enc_temp_folder/bfb797a99c05219556ed5f120d902f/: translate.cpp
resources/: app.rc
